--- a/style.css
+++ b/style.css
@@ -56,11 +56,10 @@ table {
 }
 
 h1, .text{
-	font-size: 40px;
+	font-size: 60px;
 	margin-bottom: 30px;
 	letter-spacing: 8px;
-	height: 50px;
-	background-color: red;
+	height: 100px;
 }
 
 p, .m-box-clip-text-2{
@@ -75,21 +74,20 @@ p, .m-box-clip-text-2{
 	width: 750px;
 	height: 464px;
 	margin: 0 auto;
-	padding: 30px;
+	padding: 60px 30px;
 }
 
 .m-box{
 	width: 500px;
 	margin: 0;
 	background-color: rgba(255,255,255,0.8);
-	padding: 20px;
+	padding: 0px;
 }
 
 
 
 .bakom-bg{
-
-	background: url('images/torget.jpg') repeat 0 0 #222;
+	background: url('images/torget.jpg') no-repeat 0 0 #222;
 	background-size: 750px 464px;
 }
 
